--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "calcite-maps",
-  "version": "0.0.1",
+  "version": "0.9.0",
   "description": "Web map app design framework",
   "main": "\"\"",
   "dependencies": {
-    "grunt-cli": "^0.1.13"
+    "grunt-cli": "^0.1.13",
+    "npm": "^6.4.1"
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
-    "grunt": "^0.4.5",
+    "grunt": "^1.3.0",
     "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-cssmin": "^0.14.0",
@@ -16,7 +17,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.1.0",
     "matchdep": "^1.0.0",
-    "node-sass": "^3.4.2"
+    "node-sass": "^4.13.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -33,7 +34,7 @@
     "Bootstrap"
   ],
   "author": "Allan Laframboise",
-  "license": "ISC",
+  "license": "Apache2",
   "bugs": {
     "url": "https://github.com/alaframboise/calcite-maps/issues"
   },
