--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.1.0",
     "matchdep": "^1.0.0",
+  <<<<<<< dependabot/npm_and_yarn/node-sass-4.14.1
+    "node-sass": "^4.14.1"
+  =======
     "node-sass": "^4.13.1"
+  >>>>>>> als-v0.8-js-4.8
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
